--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="p-5 bg-dark w-25">
         <h4 class="text-center text-white">Advices</h4>
-        <p id="showAdvices" class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, magnam!</p>
+        <p id="showAdvices" class="text-white"></p>
     </div>
     <!-- bootstrap js  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
